# ChangeLog for virtual/perl-JSON-PP
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-JSON-PP/ChangeLog,v 1.39 2014/11/08 15:48:13 dilfridge Exp $

  08 Nov 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -perl-JSON-PP-2.272.0-r2.ebuild:
  Remove old

  18 Oct 2014; Mike Frysinger <vapier@gentoo.org>
  perl-JSON-PP-2.272.0-r2.ebuild, perl-JSON-PP-2.272.20-r1.ebuild,
  perl-JSON-PP-2.272.30.ebuild:
  Mark arm64/s390/sh stable.

  18 Oct 2014; Mike Frysinger <vapier@gentoo.org>
  perl-JSON-PP-2.272.0-r2.ebuild, perl-JSON-PP-2.272.20-r1.ebuild,
  perl-JSON-PP-2.272.30.ebuild:
  Add m68k love.

  23 Sep 2014; Agostino Sarubbo <ago@gentoo.org>
  perl-JSON-PP-2.272.20-r1.ebuild:
  Stable for sparc, wrt bug #504786

  22 Sep 2014; Agostino Sarubbo <ago@gentoo.org>
  perl-JSON-PP-2.272.20-r1.ebuild:
  Stable for x86, wrt bug #504786

  22 Sep 2014; Agostino Sarubbo <ago@gentoo.org>
  perl-JSON-PP-2.272.20-r1.ebuild:
  Stable for ia64, wrt bug #504786

  21 Sep 2014; Agostino Sarubbo <ago@gentoo.org>
  perl-JSON-PP-2.272.20-r1.ebuild:
  Stable for ppc, wrt bug #504786

  21 Sep 2014; Agostino Sarubbo <ago@gentoo.org>
  perl-JSON-PP-2.272.20-r1.ebuild:
  Stable for ppc64, wrt bug #504786

  17 Sep 2014; Jeroen Roovers <jer@gentoo.org> perl-JSON-PP-2.272.20-r1.ebuild:
  Stable for HPPA (bug #504786).

  31 Aug 2014; Mikle Kolyada <zlogene@gentoo.org>
  perl-JSON-PP-2.272.20-r1.ebuild:
  arm stable wrt bug #504786

  28 Jul 2014; Mikle Kolyada <zlogene@gentoo.org>
  perl-JSON-PP-2.272.20-r1.ebuild:
  amd64 stable wrt bug #381424

  24 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
  perl-JSON-PP-2.272.20-r1.ebuild:
  Stable on alpha, bug #381424

*perl-JSON-PP-2.272.30 (08 Jul 2014)
*perl-JSON-PP-2.272.20-r1 (08 Jul 2014)
*perl-JSON-PP-2.272.0-r2 (08 Jul 2014)

  08 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -perl-JSON-PP-2.271.40.ebuild, -perl-JSON-PP-2.271.50-r2.ebuild,